--- a/public/500.html
+++ b/public/500.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-  <title>We're sorry, but something went wrong (500)</title>
+  <title>Sorry, something went wrong (error 500)</title>
+  <meta name='robots' content='noindex' />
 	<style type="text/css">
-		body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
+		body { background-color: #fff; color: #444; text-align: center; font-family: arial, sans-serif; }
 		div.dialog {
-			width: 25em;
-			padding: 0 4em;
-			margin: 4em auto 0 auto;
-			border: 1px solid #ccc;
-			border-right-color: #999;
-			border-bottom-color: #999;
+			padding: 2em;
+			margin: 0 auto;
 		}
-		h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
+		h1 { color: #036564; line-height: 1.5em; }
+		img { margin: 1em }
 	</style>
 </head>
 
 <body>
-  <!-- This file lives in public/500.html -->
   <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
-    <p>We've been notified about this issue and we'll take a look at it shortly.</p>
+    <img src="images/500.png" alt="Error 500 o'clock" height="193" width="192" />
+    <h1>Sorry, something went wrong (error 500)</h1>
+    <p>We log every error and have been notified about this issue and we'll take a look at it shortly.</p>
+    <p>Return to <a href="/">Opening Times home page</a>..</p>
   </div>
 </body>
 </html>
+
