--- a/public/404.html
+++ b/public/404.html
@@ -21,7 +21,7 @@
     <img src="images/404.png" alt="Error 404 o'clock" height="193" width="192" />
     <h1>Page not found (error 404)</h1>
     <p>You may have mistyped the address or the page may have moved.</p>
-    <p>Return to <a href="/">Opening Times home page</a>..</p>
+    <p>Return to <a href="/">Opening Times home page</a>.</p>
   </div>
 </body>
 </html>
