--- a/public/500.html
+++ b/public/500.html
@@ -21,7 +21,7 @@
     <img src="images/500.png" alt="Error 500 o'clock" height="193" width="192" />
     <h1>Sorry, something went wrong (error 500)</h1>
     <p>We log every error and have been notified about this issue and we'll take a look at it shortly.</p>
-    <p>Return to <a href="/">Opening Times home page</a>..</p>
+    <p>Return to <a href="/">Opening Times home page</a>.</p>
   </div>
 </body>
 </html>
