Tweaked font and layout

--- a/public/404.html
+++ b/public/404.html
@@ -11,7 +11,7 @@
 			padding: 2em;
 			margin: 0 auto;
 		}
-		h1 { color: #036564; line-height: 1.5em; }
+		h1 { color: #036564; line-height: 1.5em; font-weight: normal; }
 		img { margin: 1em }
 	</style>
 </head>
@@ -19,9 +19,10 @@
 <body>
   <div class="dialog">
     <img src="images/404.png" alt="Error 404 o'clock" height="193" width="192" />
-    <h1>Page not found (error 404)</h1>
-    <p>You may have mistyped the address or the page may have moved.</p>
+    <h1>Page not found</h1>
+    <p>You may have mistyped the address or the page may have moved or been deleted.</p>
     <p>Return to <a href="/">Opening Times home page</a>.</p>
+    <p><small>Error 404</small></p>
   </div>
 </body>
 </html>
