--- a/public/500.html
+++ b/public/500.html
@@ -11,7 +11,7 @@
 			padding: 2em;
 			margin: 0 auto;
 		}
-		h1 { color: #036564; line-height: 1.5em; }
+    h1 { color: #036564; line-height: 1.5em; font-weight: normal; }
 		img { margin: 1em }
 	</style>
 </head>
@@ -19,9 +19,10 @@
 <body>
   <div class="dialog">
     <img src="images/500.png" alt="Error 500 o'clock" height="193" width="192" />
-    <h1>Sorry, something went wrong (error 500)</h1>
+    <h1>Sorry, something went wrong</h1>
     <p>We log every error and have been notified about this issue and we'll take a look at it shortly.</p>
     <p>Return to <a href="/">Opening Times home page</a>.</p>
+    <p><small>Error 500</small></p>
   </div>
 </body>
 </html>
