Made image path root relative

--- a/public/404.html
+++ b/public/404.html
@@ -18,7 +18,7 @@
 
 <body>
   <div class="dialog">
-    <img src="images/404.png" alt="Error 404 o'clock" height="193" width="192" />
+    <img src="/images/404.png" alt="Error 404 o'clock" height="193" width="192" />
     <h1>Page not found</h1>
     <p>You may have mistyped the address or the page may have moved or been deleted.</p>
     <p>Return to <a href="/">Opening Times home page</a>.</p>
