--- a/public/404.html
+++ b/public/404.html
@@ -23,7 +23,37 @@
     <p>You may have mistyped the address or the page may have moved or been deleted.</p>
     <p>Return to <a href="/">Opening Times home page</a>.</p>
     <p><small>Error 404</small></p>
+
+        <style type="text/css">
+          #goog-wm { }
+          #goog-wm h3.closest-match { }
+          #goog-wm h3.closest-match a { }
+          #goog-wm h3.other-things { }
+          #goog-wm ul li { }
+          #goog-wm li.search-goog { display: block; }
+        </style>
+        <script type="text/javascript">
+          var GOOG_FIXURL_LANG = 'en_GB';
+          var GOOG_FIXURL_SITE = 'http://opening-times.co.uk/';
+        </script>
+
+        <script type="text/javascript" src="http://linkhelp.clients.google.com/tbproxy/lh/wm/fixurl.js"></script>
+
+
+
   </div>
+
+
+  <script type="text/javascript">
+  var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+  document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+  </script>
+  <script type="text/javascript">
+  var pageTracker = _gat._getTracker("UA-3174888-2");
+  pageTracker._initData();
+  pageTracker._trackPageview("/404.html?page=" + document.location.pathname + document.location.search + "&from=" + document.referrer);
+  </script>
+
 </body>
 </html>
 
