--- a/public/500.html
+++ b/public/500.html
@@ -24,6 +24,17 @@
     <p>Return to <a href="/">Opening Times home page</a>.</p>
     <p><small>Error 500</small></p>
   </div>
+
+  <script type="text/javascript">
+  var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+  document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+  </script>
+  <script type="text/javascript">
+  var pageTracker = _gat._getTracker("UA-3174888-2");
+  pageTracker._initData();
+  pageTracker._trackPageview("/500.html?page=" + document.location.pathname + document.location.search + "&from=" + document.referrer);
+  </script>
+
 </body>
 </html>
 
